--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.1"
+agp = "8.5.2"
 cascadeCompose = "2.3.0"
 datastorePreferences = "1.1.1"
 hiltAndroid = "2.51.1"
@@ -11,14 +11,14 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
-composeBom = "2024.06.00"
-material3-adaptive = "1.0.0-beta04"
+composeBom = "2024.08.00"
+material3-adaptive = "1.0.0-rc01"
 material3Version = "1.2.1"
-material3AdaptiveNavSuite = "1.3.0-beta05"
+material3AdaptiveNavSuite = "1.3.0-rc01"
 navigationRuntime = "2.7.7"
-navigationCompose = "2.8.0-beta06"
+navigationCompose = "2.8.0-rc01"
 serialization = "1.6.3"
-adaptiveLayout = "1.0.0-beta04"
+adaptiveLayout = "1.0.0-rc01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
