feat: Add Unsplash login using AppAuth and DataStore
This commit introduces a feature allowing users to log in to their Unsplash accounts using AppAuth for authorization. User details are then persisted using DataStore.
The following changes were made:
- Integrated the AppAuth library to handle the OAuth2 authorization flow with Unsplash.
- Implemented the login functionality using AppAuth to obtain authorization tokens from Unsplash.
- Utilized DataStore to securely store obtained tokens and user information.
- Updated the application navigation to initiate the Unsplash login flow.
This feature allows users to access and interact with their Unsplash accounts within the application, enhancing personalization and enabling features that require Unsplash authentication.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ google-services.json
 
 # .DS_Store (Mac folder settings, not needed for version control)
 .DS_Store
+
+# API key file
+apikey.properties
+
+./gradle.properties
