--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,12 @@
 [versions]
 agp = "8.5.2"
+appauth = "0.11.1"
 cascadeCompose = "2.3.0"
+coilCompose = "2.7.0"
 datastorePreferences = "1.1.1"
-hiltAndroid = "2.51.1"
+hiltAndroid = "2.52"
 hiltNavigationFragment = "1.2.0"
+jwtdecode = "1.0"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -17,17 +20,20 @@ material3Version = "1.2.1"
 material3AdaptiveNavSuite = "1.3.0-rc01"
 navigationRuntime = "2.7.7"
 navigationCompose = "2.8.0-rc01"
-serialization = "1.6.3"
+retrofit = "2.11.0"
+retrofit-kotlin-coroutine-adapter="0.9.2"
+serialization = "1.7.1"
 adaptiveLayout = "1.0.0-rc01"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
-
-
 androidx-hilt-navigation-fragment = { module = "androidx.hilt:hilt-navigation-fragment", version.ref = "hiltNavigationFragment" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3Version" }
+appauth = { module = "net.openid:appauth", version.ref = "appauth" }
 cascade-compose = { module = "me.saket.cascade:cascade-compose", version.ref = "cascadeCompose" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -49,7 +55,11 @@ androidx-material-icons-extended = { group = "androidx.compose.material", name =
 androidx-navigation-runtime = { group = "androidx.navigation", name = "navigation-runtime", version.ref = "navigationRuntime" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-adaptive-layout = { module = "androidx.compose.material3.adaptive:adaptive-layout", version.ref = "adaptiveLayout" }
+jwtdecode = { module = "com.auth0.android:jwtdecode", version.ref = "jwtdecode" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit-kotlin-coroutine-adapter={module= "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter",version.ref="retrofit-kotlin-coroutine-adapter"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
