--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.5.2"
 appauth = "0.11.1"
 cascadeCompose = "2.3.0"
 coilCompose = "2.7.0"
+coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.1"
 hiltAndroid = "2.52"
 hiltNavigationFragment = "1.2.0"
@@ -15,11 +16,13 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.08.00"
+lifecycleViewmodelCompose = "2.8.6"
 material3-adaptive = "1.0.0-rc01"
 material3Version = "1.2.1"
 material3AdaptiveNavSuite = "1.3.0-rc01"
 navigationRuntime = "2.7.7"
 navigationCompose = "2.8.0-rc01"
+pagingRuntime = "3.3.2"
 retrofit = "2.11.0"
 retrofit-kotlin-coroutine-adapter="0.9.2"
 serialization = "1.7.1"
@@ -28,9 +31,14 @@ adaptiveLayout = "1.0.0-rc01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationFragment" }
 androidx-hilt-navigation-fragment = { module = "androidx.hilt:hilt-navigation-fragment", version.ref = "hiltNavigationFragment" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3Version" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingRuntime" }
+androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
 appauth = { module = "net.openid:appauth", version.ref = "appauth" }
 cascade-compose = { module = "me.saket.cascade:cascade-compose", version.ref = "cascadeCompose" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
